maybe this works

--- a/Página-Inicial.html
+++ b/Página-Inicial.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="Página Inicial">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header u-palette-1-base u-header" id="sec-f2ca"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="pt"><header class="u-clearfix u-header u-palette-1-base u-header" id="sec-f2ca"><div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-playfair-display u-hover-none u-none u-text-white u-btn-1" href="Página-Inicial.html">AdminDEP<br>Reuniões
           </a>
