--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </h2>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-1843">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/image.png" alt="" data-image-width="989" data-image-height="589">
         <img class="u-image u-image-contain u-image-default u-image-2" src="images/UfsLogo1.png" alt="" data-image-width="300" data-image-height="247">
         <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-custom-color-1 u-text-default u-text-1">Módulo de Reuniões do AdminDEP </h1>
