--- a/Página-Inicial.html
+++ b/Página-Inicial.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="pt"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="AdminDEPReuniões, Módulo de Reuniões do AdminDEP​, Explore as principais funcionalidades, Sample Headline, Sample Headline, Sample Headline, Sample Headline, Assista o pitch do nosso projeto, Conheça a Equipe, Você pode nos contactar através do nosso e-mail:admindep@dcomp.ufs.br​​">
+    <meta name="keywords" content="AdminDEPReuniões, Módulo de Reuniões do AdminDEP​, Explore as principais funcionalidades, Assista o pitch do nosso projeto, Conheça a Equipe, Você pode nos contactar através do nosso e-mail:admindep@dcomp.ufs.br​​">
     <meta name="description" content="">
     <title>Página Inicial</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -90,28 +90,28 @@
         <li data-u-target="#carousel_29db" class="u-grey-30" data-u-slide-to="3"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
-        <div class="u-active u-align-center u-carousel-item u-clearfix u-container-align-center u-section-4-1">
-          <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <h1 class="u-align-center u-text u-text-default u-title u-text-1">Sample Headline</h1>
-            <p class="u-align-center u-large-text u-text u-text-variant u-text-2">Sample text</p>
+        <div class="u-active u-align-center u-carousel-item u-clearfix u-section-4-1">
+          <div class="u-clearfix u-sheet u-sheet-1">
+            <p class="u-align-center u-custom-font u-font-playfair-display u-large-text u-text u-text-variant u-text-1">Listar Reuniões</p>
+            <img class="custom-expanded u-image u-image-default u-image-1" src="images/image1.png" alt="" data-image-width="1875" data-image-height="878">
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-container-align-center u-section-4-2">
-          <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <h1 class="u-align-center u-text u-text-default u-title u-text-1">Sample Headline</h1>
-            <p class="u-align-center u-large-text u-text u-text-variant u-text-2">Sample text</p>
+        <div class="u-align-center u-carousel-item u-clearfix u-section-4-2">
+          <div class="u-clearfix u-sheet u-sheet-1">
+            <p class="u-align-center u-custom-font u-font-playfair-display u-large-text u-text u-text-variant u-text-1">Visualizar Detalhes de uma Reunião</p>
+            <img class="custom-expanded u-image u-image-default u-image-1" src="images/image4.png" alt="" data-image-width="1878" data-image-height="917">
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-container-align-center u-section-4-3">
-          <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <h1 class="u-align-center u-text u-text-default u-title u-text-1">Sample Headline</h1>
-            <p class="u-align-center u-large-text u-text u-text-variant u-text-2">Sample text</p>
+        <div class="u-align-center u-carousel-item u-clearfix u-section-4-3">
+          <div class="u-clearfix u-sheet u-sheet-1">
+            <p class="u-align-center u-custom-font u-font-playfair-display u-large-text u-text u-text-variant u-text-1">Visualização do Calendário Geral de Reuniões</p>
+            <img class="custom-expanded u-image u-image-default u-image-1" src="images/image3.png" alt="" data-image-width="1878" data-image-height="872">
           </div>
         </div>
-        <div class="u-align-center u-carousel-item u-clearfix u-container-align-center u-section-4-4">
-          <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <h1 class="u-align-center u-text u-text-default u-title u-text-1">Sample Headline</h1>
-            <p class="u-align-center u-large-text u-text u-text-variant u-text-2">Sample text</p>
+        <div class="u-align-center u-carousel-item u-clearfix u-section-4-4">
+          <div class="u-clearfix u-sheet u-sheet-1">
+            <p class="u-align-center u-custom-font u-font-playfair-display u-large-text u-text u-text-variant u-text-1">Cadastrar Novo Calendário de Reuniões</p>
+            <img class="custom-expanded u-image u-image-default u-image-1" src="images/image2.png" alt="" data-image-width="1878" data-image-height="870">
           </div>
         </div>
       </div>
@@ -207,7 +207,7 @@
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="750">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <div alt="" class="u-image u-image-circle u-image-2" data-image-width="595" data-image-height="605"></div>
+                <div alt="" class="u-image u-image-circle u-image-2" data-image-width="922" data-image-height="821"></div>
                 <h3 class="u-align-center u-custom-font u-font-oswald u-text u-text-3">débora maria coelho nascimento</h3>
                 <p class="u-align-center u-text u-text-palette-3-base u-text-4">Consultoria Técnica</p>
               </div>
