--- a/Sobre.html
+++ b/Sobre.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="pt"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="AdminDEPReuniões">
+    <meta name="keywords" content="AdminDEP, Módulo de Reuniões">
     <meta name="description" content="">
     <title>Sobre</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -48,10 +48,8 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <h2 class="u-text u-text-default u-text-1">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-playfair-display u-hover-none u-none u-text-white u-btn-1" href="Página-Inicial.html">AdminDEP<br>Reuniões
-          </a>
-        </h2>
+        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-1">AdminDEP</h1>
+        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-2">Módulo de Reuniões</h1>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-35c4">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
