--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <h2 class="u-text u-text-default u-text-1">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-playfair-display u-hover-none u-none u-text-white u-btn-1" href="Página-Inicial.html">AdminDEP<br>Reuniões
-          </a>
-        </h2>
+        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-1">AdminDEP</h1>
+        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-2">Módulo de Reuniões</h1>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-1843">
-      <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/image.png" alt="" data-image-width="989" data-image-height="589">
         <img class="u-image u-image-contain u-image-default u-image-2" src="images/UfsLogo1.png" alt="" data-image-width="300" data-image-height="247">
         <h1 class="u-align-center-sm u-align-center-xs u-custom-font u-font-playfair-display u-text u-text-custom-color-1 u-text-default u-text-1">Módulo de Reuniões do AdminDEP </h1>
@@ -72,9 +70,7 @@
     <section class="u-align-center u-clearfix u-custom-color-1 u-section-2" id="sec-fa17">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h6 class="u-align-center u-text u-text-default u-text-1">O Que é o módulo de reuniões do admindep?</h6>
-        <p class="u-align-center u-text u-text-2"><b>O Módulo de Reuniões do AdminDEP é um programa administrador de reuniões. Ele busca auxiliar instituições no gerenciamento de suas reuniões de forma mais fácil: utilizando um sistema web que proporciona diversos métodos como por exemplo o cadastro de reuniões e de calendários, gerenciamento de itens de pauta de reuniões, coordenação de deliberações, controle de votação, sistema de notificação de participantes e suplentes, entre outras funcionalidades</b>
-          <br>
-        </p>
+        <p class="u-align-center u-text u-text-2"> O Módulo de Reuniões do AdminDEP é um programa administrador de reuniões. Ele busca auxiliar instituições no gerenciamento de suas reuniões de forma mais fácil: utilizando um sistema web que proporciona diversos métodos como por exemplo o cadastro de reuniões e de calendários, gerenciamento de itens de pauta de reuniões, coordenação​​​ de deliberações, controle de votação, sistema de notificação de participantes e suplentes, entre outras funcionalidades</p>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-palette-1-base u-section-3" id="sec-0264">
@@ -82,12 +78,12 @@
         <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Explore as principais funcionalidades&nbsp;</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-48e4-1" id="carousel_29db" data-interval="5000" data-u-ride="carousel">
+    <section class="u-carousel u-slide u-block-48e4-1" id="carousel-f455" data-interval="5000" data-u-ride="carousel">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-48e4-2">
-        <li data-u-target="#carousel_29db" class="u-active u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel_29db" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel_29db" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel_29db" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#carousel-f455" class="u-active u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#carousel-f455" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#carousel-f455" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#carousel-f455" class="u-grey-30" data-u-slide-to="3"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-section-4-1">
@@ -115,14 +111,14 @@
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-48e4-3" href="#carousel_29db" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-48e4-3" href="#carousel-f455" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-48e4-4" href="#carousel_29db" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-48e4-4" href="#carousel-f455" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
@@ -132,10 +128,10 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-1-base u-section-5" id="sec-eee5">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1">Assista o pitch do nosso projeto</h2>
+        <h2 class="u-align-center u-text u-text-default u-text-1">Assista o pitch do nosso produto</h2>
         <div class="custom-expanded u-align-left u-video u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/L-hm3S1aSnI?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/I1o-AnYicvY?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
@@ -248,12 +244,12 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-1-base u-section-9" id="sec-097f">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-1">Você pode nos contactar através do nosso e-mail:<br>
-          <br>
-          <span style="font-weight: 400;">admindep@dcomp.ufs.br </span>
+        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-1">Você pode nos contactar através do nosso e-mail:<br>
         </h1>
-        <p class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-2"> ©</p>
-        <p class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-3">2024 - AdminDEP Reuniões. Todos os Direitos Reservados. </p>
+        <h1 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-2">admindep@dcomp.ufs.br<br>
+        </h1>
+        <p class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-3"> ©</p>
+        <p class="u-align-center u-custom-font u-font-playfair-display u-text u-text-default u-text-4">2024 - AdminDEP Reuniões. Todos os Direitos Reservados. </p>
       </div>
     </section>
     
